fix: list gap (#66)

--- a/src/styles.css
+++ b/src/styles.css
@@ -206,6 +206,10 @@
   ol,
   ul {
     padding-left: 1.25em;
+
+    & > li + li {
+      margin-top: 0.5em;
+    }
   }
 
   ul {
